resources/setup/network-observability/allow-from-netobserv-privileged-namespace.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-from-netobserv-privileged-namespace
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: netobserv-privileged
  podSelector: {}
  policyTypes:
  - Ingress
